--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
 
   <!-- ======= Header ======= -->
-  <header id="header" class="d-flex align-items-center ">
+<!--   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
 
       <div id="logo" class="me-auto">
 
-        <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
+        <h1><a href="index.html">The<span>Event</span></a></h1>
         <a href="index.html" class="scrollto"><img src="assets/img/logo.png" alt="" title=""></a>
       </div>
 
@@ -51,7 +51,7 @@
           <!-- <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#games">Games</a></li>
           <li><a class="nav-link scrollto" href="#anime">Anime</a></li> -->
-          <li><a class="nav-link scrollto" href="#movies">Movies</a></li>
+<!--           <li><a class="nav-link scrollto" href="#movies">Movies</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#soon">Hosting</a></li>
           <li><a class="nav-link scrollto" href="#faq">FAQ</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li> -->
@@ -73,15 +73,16 @@
               <li><a href="#">Soon</a></li>
             </ul>
           </li> -->
-          <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
+          <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
 
       <a class="buy-tickets scrollto" href="#soon">Soon</a>
 
     </div>
-  </header><!-- End Header -->
+  </header> -->
+  <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <!-- <section id="hero">
@@ -975,7 +976,7 @@
 
 
   <!-- Modal Order Form -->
-  <div id="buy-ticket-modal" class="modal fade">
+<!--   <div id="buy-ticket-modal" class="modal fade">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -1005,7 +1006,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   </section> -->
   <!--- End Buy Ticket Section -->
