--- a/index.html
+++ b/index.html
@@ -237,6 +237,13 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
+      <a href="https://www.newtonas.tk/movies/theamazingspiderman2.mp4">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BOTA5NDYxNTg0OV5BMl5BanBnXkFtZTgwODE5NzU1MTE@._V1_.jpg">
+          <h1 slot="header">The Amazing SpiderMan 2 (2014)</h1>
+          <p slot="content">HINDI 720p</p>
+        </card>
+      </a>
       <a href="https://www.newtonas.tk/movies/avengersinfinitywar.mp4">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjMxNjY2MDU1OV5BMl5BanBnXkFtZTgwNzY1MTUwNTM@._V1_.jpg">
@@ -251,6 +258,7 @@
           <p slot="content">HINDI</p>
         </card>
       </a>
+      
     </div>
   </section>
 
