--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
        <a href="#">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BYTYwODVlOGEtYmNhZS00YWE3LTk0YzItNGIyNjRlZDBhZDhjXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg">
-          <h1 slot="header"Spider-Man: Far from Home (2019)</h1>
+          <h1 slot="header">Spider-Man: Far from Home (2019)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
