--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://youtu.be/HrzDo8I5n08">
+      <a href="https://www.newtonas.tk/movies/spiderman3.mp4">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://cdn.europosters.eu/image/750/posters/spiderman-3-teaser-i1282.jpg">
           <h1 slot="header">Spiderman 3</h1>
