--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BYTYwODVlOGEtYmNhZS00YWE3LTk0YzItNGIyNjRlZDBhZDhjXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg">
           <h1 slot="header">Spider-Man: Far from Home (2019)</h1>
-          <p slot="content">HINDI 720p (Processing Video)</p>
+          <p slot="content">HINDI 720p - We're processing this video. Please check back later.</p>
         </card>
       </a>
       <a href="https://drive.google.com/file/d/1SF9PAAchp9Yu82jF1059No7bNOe5E6Uc/view?usp=drivesdk">
