--- a/index.html
+++ b/index.html
@@ -238,6 +238,13 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
+      <a href="https://www.youtube.com/c/EXTREMEBASS1/featured" target="_blank">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://i.pinimg.com/originals/7d/c9/93/7dc993c70d4adba215b87cafdc59d82d.png">
+          <h1 slot="header">Youtube Channel</h1>
+          <p slot="content">Subscribe!</p>
+        </card>
+      </a>
       
       <a href="https://newtonas.tk/movies/venom.mp4">
         <card data-aos="fade-up" data-aos-delay="100"
