--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </a>
       <a href="https://www.youtube.com/c/EXTREMEBASS1/featured" target="_blank">
         <card data-aos="fade-up" data-aos-delay="100"
-          data-image="https://i.pinimg.com/originals/7d/c9/93/7dc993c70d4adba215b87cafdc59d82d.png">
+          data-image="https://www.freeiconspng.com/thumbs/youtube-logo-png/youtube-logo-picture-download-1.png">
           <h1 slot="header">Youtube Channel</h1>
           <p slot="content">Subscribe!</p>
         </card>
