--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </a>
       <a href="https://www.youtube.com/c/EXTREMEBASS1/featured" target="_blank">
         <card data-aos="fade-up" data-aos-delay="100"
-          data-image="https://www.freeiconspng.com/thumbs/youtube-logo-png/youtube-logo-picture-download-1.png">
+          data-image="https://images.news18.com/ibnlive/uploads/2021/03/1615382898_featured-image-2021-03-10t185810.215.jpg?im=FitAndFill,width=1200,height=675">
           <h1 slot="header">Youtube Channel</h1>
           <p slot="content">Subscribe!</p>
         </card>
