--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </a>
       <a href="https://www.youtube.com/c/EXTREMEBASS1/featured" target="_blank">
         <card data-aos="fade-up" data-aos-delay="100"
-          data-image="https://akm-img-a-in.tosshub.com/indiatoday/images/story/201708/youtube_559_083017114912.jpg?size=770:433">
+          data-image="https://www.xda-developers.com/files/2018/06/youtube-dark.png">
           <h1 slot="header">Youtube Channel</h1>
           <p slot="content">Subscribe!</p>
         </card>
