--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1121491723981481"
+     crossorigin="anonymous"></script>
 
 
 
