--- a/index.html
+++ b/index.html
@@ -289,6 +289,13 @@
           <p slot="content">HINDI</p>
         </card>
       </a>
+      <a href="https://drive.google.com/file/d/19F5OEF70w__kK7yOCljlV7fVvF4YIfVE/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BNWM0ZGJlMzMtZmYwMi00NzI3LTgzMzMtNjMzNjliNDRmZmFlXkEyXkFqcGdeQXVyMTM1MTE1NDMx._V1_.jpg">
+          <h1 slot="header">Doctor Strange in the Multiverse of Madness (2022)</h1>
+          <p slot="content">HINDI 1080p</p>
+        </card>
+      </a>
      
       
     </div>
