--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
           <p slot="content">HINDI</p>
         </card>
       </a>
-       <a href="#">
+       <a href="https://drive.google.com/file/d/1gY0P2GrujyaWu7St1ZS69jox9O1yWab5/view?usp=sharing">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BYTYwODVlOGEtYmNhZS00YWE3LTk0YzItNGIyNjRlZDBhZDhjXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg">
-          <h1 slot="header">Spider-Man: Far from Home (2019)</h1>
-          <p slot="content">HINDI 720p - We're processing this video. Please check back later.</p>
+          <h1 slot="header">(English) Spider-Man: Far from Home (2019)</h1>
+          <p slot="content">ENGLISH 720p</p>
         </card>
       </a>
       <a href="https://drive.google.com/file/d/1SF9PAAchp9Yu82jF1059No7bNOe5E6Uc/view?usp=drivesdk">
