--- a/index.html
+++ b/index.html
@@ -218,18 +218,18 @@
         </card>
       </a>
 
-      <a href="https://www.newtonas.tk/movies/spiderman.mp4">
+      <a href="https://drive.google.com/file/d/1opcMmUP1bPd-6rLb6U2boagrK6w5y0j1/view?usp=sharing">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://i.pinimg.com/originals/d4/ac/c8/d4acc863d31ab88d4a508976c22162de.jpg">
           <h1 slot="header">Spiderman(2002)</h1>
-          <p slot="content">HINDI 720p</p>
+          <p slot="content">HINDI 1080p</p>
         </card>
       </a>
-      <a href="https://www.newtonas.tk/movies/spiderman2.mp4">
+      <a href="https://drive.google.com/file/d/1h9RTrK1N1bgE6XvKEa1UHB0GiO8GjrZy/view?usp=sharing">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://i.pinimg.com/originals/72/61/67/72616709f3a5d440f17c88684be8040a.png">
           <h1 slot="header">Spiderman 2</h1>
-          <p slot="content">HINDI 720p</p>
+          <p slot="content">HINDI 1080p</p>
         </card>
       </a>
       <a href="https://www.newtonas.tk/movies/spiderman3.mp4">
@@ -293,6 +293,13 @@
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BNWM0ZGJlMzMtZmYwMi00NzI3LTgzMzMtNjMzNjliNDRmZmFlXkEyXkFqcGdeQXVyMTM1MTE1NDMx._V1_.jpg">
           <h1 slot="header">Doctor Strange in the Multiverse of Madness (2022)</h1>
+          <p slot="content">HINDI 1080p</p>
+        </card>
+      </a>
+      <a href="https://drive.google.com/file/d/1xsmcfdqjBYSFK2ooSnIFJg4dIK0rZhGm/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BYjY2NzUxNjgtNjJhNy00NTA4LTlmNzItYzQ4MDdjNWYxZjkwXkEyXkFqcGdeQXVyMTEwMTY3NDI@._V1_FMjpg_UX1000_.jpg">
+          <h1 slot="header">365 Days: This Day (2022)</h1>
           <p slot="content">HINDI 1080p</p>
         </card>
       </a>
