--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://www.newtonas.tk/movies/theamazingspiderman2.mp4">
+      <a href="https://drive.google.com/file/d/1cVxVs-5nR9cb7lM0AkHWhF68KhB2ZAQi/view?usp=drivesdk">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BOTA5NDYxNTg0OV5BMl5BanBnXkFtZTgwODE5NzU1MTE@._V1_.jpg">
           <h1 slot="header">The Amazing SpiderMan 2 (2014)</h1>
@@ -275,7 +275,7 @@
           <p slot="content">HINDI 1080p</p>
         </card>
       </a>
-      <a href="#">
+      <a href="https://drive.google.com/file/d/1hVem_F1OyshhuY3y3kUrav_vDTHIW5fc/view?usp=drivesdk">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://i.pinimg.com/736x/0c/9f/3b/0c9f3b26646ad58cb3b470e0e259f58f.jpg">
           <h1 slot="header">Deadpool 2 (2018)</h1>
@@ -289,7 +289,7 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://www.newtonas.tk/movies/avengersinfinitywar.mp4">
+      <a href="https://drive.google.com/file/d/1s71UPt8AUe6VWXv7xKIvtS8aKpk_JxpC/view?usp=drivesdk">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjMxNjY2MDU1OV5BMl5BanBnXkFtZTgwNzY1MTUwNTM@._V1_.jpg">
           <h1 slot="header">Avengers: Infinity War (2018)</h1>
