--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Hindi Movies- AS</title>
+  <title>Hindi Movies - AS</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -193,6 +193,7 @@
     <div class="section-header" data-aos="fade-up" data-aos-delay="100">
       <h2>Movies</h2>
       <p>More Coming Soon</p>
+   <a href="#"><p>How to change Language of these Movies</p> </a>
     </div>
 
     <div id="appop" class="movcontainer">
