--- a/index.html
+++ b/index.html
@@ -255,6 +255,13 @@
           <p slot="content">HINDI 1080p</p>
         </card>
       </a>
+      <a href="https://drive.google.com/file/d/1gctc5ObhhadxGJg7jK5ixpuNWWNPhDWh/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BNzI2Mjg3YjgtOGRlNy00YWMzLWFkMTQtYzcyYjU5ZjRjNmM1XkEyXkFqcGdeQXVyMTQyMTMwOTk0._V1_.jpg">
+          <h1 slot="header">Venom: Let There Be Carnage (2021)</h1>
+          <p slot="content">HINDI 720p</p>
+        </card>
+      </a>
       <a href="https://newtonas.tk/movies/theamazingspiderman.mp4">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjMyOTM4MDMxNV5BMl5BanBnXkFtZTcwNjIyNzExOA@@._V1_.jpg">
@@ -309,6 +316,20 @@
           data-image="https://m.media-amazon.com/images/M/MV5BMTM4OGJmNWMtOTM4Ni00NTE3LTg3MDItZmQxYjc4N2JhNmUxXkEyXkFqcGdeQXVyNTgzMDMzMTg@._V1_.jpg">
           <h1 slot="header">Avengers: Age of Ultron (2015)</h1>
           <p slot="content">HINDI 720p</p>
+        </card>
+      </a>
+      <a href="https://drive.google.com/file/d/1-XFodavjOpmF_EQZEHHjYOqzJT6p5bQJ/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BMjMyNDkzMzI1OF5BMl5BanBnXkFtZTgwODcxODg5MjI@._V1_.jpg">
+          <h1 slot="header">Thor: Ragnarok (2017)</h1>
+          <p slot="content">HINDI 720p</p>
+        </card>
+      </a>
+      <a href="https://drive.google.com/file/d/1ZrfDFD9LYKYQcQytz4kZLnDfxU8TfFQ5/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BMjE5MzcyNjk1M15BMl5BanBnXkFtZTcwMjQ4MjcxOQ@@._V1_FMjpg_UX1000_.jpg">
+          <h1 slot="header">Iron Man 3 (2013)</h1>
+          <p slot="content">Multi Langauge 720p</p>
         </card>
       </a>
       <a href="https://drive.google.com/file/d/19F5OEF70w__kK7yOCljlV7fVvF4YIfVE/view?usp=sharing">
