--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
       <h2>Movies</h2>
       <p>More Coming Soon</p>
   <p>Important -</p> <a href="#audio"><p>How to change Language of these Movies (Click Here) </p> </a>
+      <br>
+      <p>If some movies are in 360p, means they are currently processing in Google Drive. Check back later for good quality.</p>
     </div>
 
     <div id="appop" class="movcontainer">
