--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <p>More Coming Soon</p>
   <p>Important -</p> <a href="#audio"><p>How to change Language of these Movies (Click Here) </p> </a>
       <br>
-      <p>If some movies are in 360p, means they are currently processing in Google Drive. Check back later for good quality.</p>
+      <p>If a movie is in 360p, means they are currently processing in Google Drive. Check back later for good quality.</p>
     </div>
 
     <div id="appop" class="movcontainer">
