--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
       </a>
       <a href="https://drive.google.com/file/d/1VQowtr5Lzp3LthxNZ-vyvyOOFzV7oS2S/view?usp=sharing">
         <card data-aos="fade-up" data-aos-delay="100"
-          data-image="https://m.media-amazon.com/images/M/MV5BYzVjYThmNDAtOTE1NC00YjQ2LTk4NWYtNTc4Yzc4OTRhYjllXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_QL75_UX190_CR0,0,190,281_.jpg">
+          data-image="https://m.media-amazon.com/images/M/MV5BYzVjYThmNDAtOTE1NC00YjQ2LTk4NWYtNTc4Yzc4OTRhYjllXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_.jpg">
           <h1 slot="header">Eternals (2021)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
