--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjMyOTM4MDMxNV5BMl5BanBnXkFtZTcwNjIyNzExOA@@._V1_.jpg">
           <h1 slot="header">The Amazing SpiderMan (2012)</h1>
-          <p slot="content">HINDI 720p</p>
+          <p slot="content">ENGLISH 1080p</p>
         </card>
       </a>
       <a href="https://drive.google.com/file/d/1cVxVs-5nR9cb7lM0AkHWhF68KhB2ZAQi/view?usp=drivesdk">
