--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
        <a href="https://drive.google.com/file/d/1gY0P2GrujyaWu7St1ZS69jox9O1yWab5/view?usp=sharing">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BYTYwODVlOGEtYmNhZS00YWE3LTk0YzItNGIyNjRlZDBhZDhjXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg">
-          <h1 slot="header">(English) Spider-Man: Far from Home (2019)</h1>
+          <h1 slot="header">Spider-Man: Far from Home (2019)</h1>
           <p slot="content">ENGLISH 720p</p>
         </card>
       </a>
