--- a/index.html
+++ b/index.html
@@ -404,7 +404,21 @@
           <h1 slot="header">Eternals (2021)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
-      </a> 
+      </a>
+      <a href="https://drive.google.com/file/d/1vaQOZDIKhf1UOCOebEUGlsogbY2WxKwe/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BMzIyNDE5ODI1OV5BMl5BanBnXkFtZTcwNTIyNDE0MQ@@._V1_.jpg">
+          <h1 slot="header">Ghost Rider (2007)</h1>
+          <p slot="content">ENGLISH 720p</p>
+        </card>
+      </a>
+      <a href="https://drive.google.com/file/d/1C3L9LMFqlJqOTSKGweWwQH2DtFYw-tpu/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BY2UxNDYxMmUtZDQwOC00NjhhLTk4MjgtMWNiYWZhMDg3Nzg4XkEyXkFqcGdeQXVyMjQwMjk0NjI@._V1_.jpg">
+          <h1 slot="header">Ghost Rider: Spirit of Vengeance (2011)</h1>
+          <p slot="content">HINDI 720p</p>
+        </card>
+      </a>
     
     </div>
 
