--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://www.youtube.com/c/EXTREMEBASS1/featured" target="_blank">
+      <a href="https://www.youtube.com/c/EXTREMEBASS1/featured" target="_blank" id="youtube">
         <card data-aos="fade-up" data-aos-delay="100"
-          data-image="https://www.xda-developers.com/files/2018/06/youtube-dark.png">
+          data-image="https://c.tenor.com/3gu7TKGjONUAAAAC/youtube-logo.gif">
           <h1 slot="header">Youtube Channel</h1>
           <p slot="content">Subscribe!</p>
         </card>
@@ -276,6 +276,13 @@
           data-image="https://m.media-amazon.com/images/M/MV5BOTA5NDYxNTg0OV5BMl5BanBnXkFtZTgwODE5NzU1MTE@._V1_.jpg">
           <h1 slot="header">The Amazing Spider-Man 2 (2014)</h1>
           <p slot="content">HINDI 1080p</p>
+        </card>
+      </a>
+      <a href="#discord" id="discord">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://c.tenor.com/R8BdSPT8AFgAAAAC/discord-clyde.gif">
+          <h1 slot="header">Discord Server</h1>
+          <p slot="content">Soon</p>
         </card>
       </a>
       <a href="https://drive.google.com/file/d/12h1zY_cua1WkMrfzAwXkf2J3TWcPD9by/view?usp=sharing">
