--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://newtonas.tk/movies/theamazingspiderman.mp4">
+      <a href="https://drive.google.com/file/d/1paAmfN8RzspJs6pxR1smjkLpuzY35IcO/view?usp=sharing">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjMyOTM4MDMxNV5BMl5BanBnXkFtZTcwNjIyNzExOA@@._V1_.jpg">
           <h1 slot="header">The Amazing Spider-Man (2012)</h1>
