--- a/fast-and-furious/index.html
+++ b/fast-and-furious/index.html
@@ -208,6 +208,34 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a> -->
+    <a href="https://drive.google.com/file/d/1J1X8jAE2NVVsT2-NaqXI4_XfOPrf0er8/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BMzExYjcyYWMtY2JkOC00NDUwLTg2OTgtMDI3MGY2OWQzMDE2XkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_.jpg">
+          <h1 slot="header">2 Fast 2 Furious (2003)</h1>
+          <p slot="content">HINDI 720p</p>
+        </card>
+      </a>
+    <a href="https://drive.google.com/file/d/104b0DrlX_gHBnsbLAwrRQZ_LRm0gpJlR/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BMTUxNTk5MTE0OF5BMl5BanBnXkFtZTcwMjA2NzY3NA@@._V1_.jpg">
+          <h1 slot="header">Fast Five (2011)</h1>
+          <p slot="content">HINDI 720p</p>
+        </card>
+      </a>
+    <a href="https://drive.google.com/file/d/1nnU1k4sV8JRbofKKdJHUBMit0jDqckBP/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BMTQ2NTMxODEyNV5BMl5BanBnXkFtZTcwMDgxMjA0MQ@@._V1_FMjpg_UX1000_.jpg">
+          <h1 slot="header">The Fast and the Furious: Tokyo Drift (2006)</h1>
+          <p slot="content">HINDI 720p</p>
+        </card>
+      </a>
+    <a href="https://drive.google.com/file/d/1zrTynqw-Ir4o7oiSB-0mXGeGVtBFfGX2/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BMTM3NTg2NDQzOF5BMl5BanBnXkFtZTcwNjc2NzQzOQ@@._V1_QL75_UX140_CR0,0,140,207_.jpg">
+          <h1 slot="header">Furious 7 (2015)</h1>
+          <p slot="content">HINDI 720p</p>
+        </card>
+      </a>
 
    
       
