--- a/fast-and-furious/index.html
+++ b/fast-and-furious/index.html
@@ -231,7 +231,7 @@
       </a>
     <a href="https://drive.google.com/file/d/1zrTynqw-Ir4o7oiSB-0mXGeGVtBFfGX2/view?usp=sharing">
         <card data-aos="fade-up" data-aos-delay="100"
-          data-image="https://m.media-amazon.com/images/M/MV5BMTM3NTg2NDQzOF5BMl5BanBnXkFtZTcwNjc2NzQzOQ@@._V1_QL75_UX140_CR0,0,140,207_.jpg">
+          data-image="https://m.media-amazon.com/images/M/MV5BMTBmNWQ0Y2UtOTQ3Yy00OTZjLWE0MWYtOTk1YWRiNTFlN2EzXkEyXkFqcGdeQXVyMTE5NzI0NDM@._V1_.jpg">
           <h1 slot="header">Furious 7 (2015)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
