--- a/index.html
+++ b/index.html
@@ -432,6 +432,14 @@
           <p slot="content">Click to Watch Available Movies</p>
         </card>
       </a> 
+      <a href="https://movies.newtonas.tk/guardians-of-the-galaxy/" target="_blank">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BMTAwMjU5OTgxNjZeQTJeQWpwZ15BbWU4MDUxNDYxODEx._V1_FMjpg_UX1000_.jpg">
+          <h1 slot="header">Guardians of the Galaxy Movies</h1>
+          <p slot="content">Click to Watch Available Movies</p>
+        </card>
+      </a> 
+      
       <a href="https://drive.google.com/file/d/1JbCti4f2GlFandoYVdfqrN2srdOdSha0/view?usp=sharing">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTUyNzk3MjA1OF5BMl5BanBnXkFtZTcwMTE1Njg2MQ@@._V1_.jpg">
