--- a/index.html
+++ b/index.html
@@ -340,28 +340,14 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1lksiDYsxRL-ZAEkK_jsTzeQxe3eyZ4tG/view?usp=sharing">
-        <card data-aos="fade-up" data-aos-delay="100"
-          data-image="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_FMjpg_UX1000_.jpg">
-          <h1 slot="header">Iron Man (2008)</h1>
-          <p slot="content">HINDI 720p</p>
-        </card>
-      </a>
-      <a href="https://drive.google.com/file/d/1Y-uhlDknF8MIIt6i-gGVQSTfd-VOVhOi/view?usp=sharing">
-        <card data-aos="fade-up" data-aos-delay="100"
-          data-image="https://m.media-amazon.com/images/M/MV5BMTM0MDgwNjMyMl5BMl5BanBnXkFtZTcwNTg3NzAzMw@@._V1_FMjpg_UX1000_.jpg">
-          <h1 slot="header">Iron Man 2 (2010)</h1>
-          <p slot="content">HINDI 720p</p>
-        </card>
-      </a>
       
-      <a href="https://drive.google.com/file/d/1ZrfDFD9LYKYQcQytz4kZLnDfxU8TfFQ5/view?usp=sharing">
+      <a href="https://movies.newtonas.tk/iron-man/" target="_blank">
         <card data-aos="fade-up" data-aos-delay="100"
-          data-image="https://m.media-amazon.com/images/M/MV5BMjE5MzcyNjk1M15BMl5BanBnXkFtZTcwMjQ4MjcxOQ@@._V1_FMjpg_UX1000_.jpg">
-          <h1 slot="header">Iron Man 3 (2013)</h1>
-          <p slot="content">Multi Langauge 720p</p>
+          data-image="https://m.media-amazon.com/images/I/31UiPirP4GL.jpg">
+          <h1 slot="header">Iron Man Movies</h1>
+          <p slot="content">Click to Watch Available Movies</p>
         </card>
-      </a>
+      </a> 
 <!--       <a href="">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="">
