--- a/index.html
+++ b/index.html
@@ -410,7 +410,14 @@
           <h1 slot="header">The Incredible Hulk (2008)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
-      </a> 
+      </a>
+      <a href="https://drive.google.com/file/d/1yN3OJKqBos9YpHq0rX_1uab_LFl97Z5R/view?usp=sharing">
+        <card data-aos="fade-up" data-aos-delay="100"
+          data-image="https://m.media-amazon.com/images/M/MV5BMTg1MTY2MjYzNV5BMl5BanBnXkFtZTgwMTc4NTMwNDI@._V1_.jpg">
+          <h1 slot="header">Black Panther (2018)</h1>
+          <p slot="content">HINDI 720p</p>
+        </card>
+      </a>
      <a href="https://movies.newtonas.tk/x-men/" target="_blank">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://i.pinimg.com/736x/f4/0a/b5/f40ab5387dcb586d361458f0bfa49810.jpg">
