--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
 
 
 <div class="section-header" data-aos="fade-up" data-aos-delay="100" id="audio">
-      <h2>How to switch between audio tracks of these movies</h2>
-      <p>All these movies are in Dual-Audio, some movies also have Tamil-Telugu options. To switch audio tracks, first you have to download the movie. Then, if you downloaded the movie in a PC, you can just open it with the windows default video player (Films and TV). There is a audio or subtitles button in bottom left corner of Films and TV player, click it and then you can switch between Hindi or English language of the video :)<br><br>For Mobile, You need to first download the movie. You may have a Audio switch option in your default video player if not, then download the Playit app from Play Store. Open your movie in Playit, on the top right corner, click on three dots then Audio tracks button and switch between Hindi-English Language :)</p>
+      <h2>How to change Language of these movies</h2>
+     <a href="https://youtu.be/g5vx6rZ3s-c"> <p>Watch Youtube video on my channel</p></a> 
     </div>
   </section>
 
