--- a/index.html
+++ b/index.html
@@ -325,21 +325,13 @@
           <p slot="content">Click to Watch Available Movies</p>
         </card>
       </a>
-      
-      <a href="https://drive.google.com/file/d/1-d2hVo5RH2lw-zu3fchDotXw8UmWUfDG/view?usp=sharing">
+      <a href="https://movies.newtonas.tk/thor/" target="_blank">
         <card data-aos="fade-up" data-aos-delay="100"
-          data-image="https://m.media-amazon.com/images/M/MV5BOGE4NzU1YTAtNzA3Mi00ZTA2LTg2YmYtMDJmMThiMjlkYjg2XkEyXkFqcGdeQXVyNTgzMDMzMTg@._V1_FMjpg_UX1000_.jpg">
-          <h1 slot="header">Thor (2011)</h1>
-          <p slot="content">HINDI 720p</p>
+          data-image="https://upload.wikimedia.org/wikipedia/en/thumb/3/3c/Chris_Hemsworth_as_Thor.jpg/220px-Chris_Hemsworth_as_Thor.jpg">
+          <h1 slot="header">Thor Movies</h1>
+          <p slot="content">Click to Watch Available Movies</p>
         </card>
-      </a>
-      <a href="https://drive.google.com/file/d/1-XFodavjOpmF_EQZEHHjYOqzJT6p5bQJ/view?usp=sharing">
-        <card data-aos="fade-up" data-aos-delay="100"
-          data-image="https://m.media-amazon.com/images/M/MV5BMjMyNDkzMzI1OF5BMl5BanBnXkFtZTgwODcxODg5MjI@._V1_.jpg">
-          <h1 slot="header">Thor: Ragnarok (2017)</h1>
-          <p slot="content">HINDI 720p</p>
-        </card>
-      </a>
+      </a> 
       
       <a href="https://movies.newtonas.tk/iron-man/" target="_blank">
         <card data-aos="fade-up" data-aos-delay="100"
