--- a/thor/index.html
+++ b/thor/index.html
@@ -218,7 +218,7 @@
       </a>
     <a href="https://drive.google.com/file/d/1imbtReeymjCh3Cy8TipodZO15Ib1ntsL/view?usp=sharing">
         <card data-aos="fade-up" data-aos-delay="100"
-          data-image="">
+          data-image="https://m.media-amazon.com/images/M/MV5BMTQyNzAwOTUxOF5BMl5BanBnXkFtZTcwMTE0OTc5OQ@@._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">Thor: The Dark World (2013)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
