--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
           <p slot="content">Click to Watch Available Movies</p>
         </card>
       </a> 
-      <a href="#">
+      <a href="https://movies.newtonas.tk/dceu/" target="_blank">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://pbs.twimg.com/media/FL-hn5aWUAAdfp2.jpg:large">
           <h1 slot="header">DC Extended Universe Movies</h1>
