--- a/index.html
+++ b/index.html
@@ -234,21 +234,21 @@
         </card>
       </a>
 
-      <a href="https://drive.google.com/file/d/1opcMmUP1bPd-6rLb6U2boagrK6w5y0j1/view?usp=sharing">
+      <a href="https://shrinke.me/gmRX0NCY">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://i.pinimg.com/originals/d4/ac/c8/d4acc863d31ab88d4a508976c22162de.jpg">
           <h1 slot="header">Spider-Man (2002)</h1>
           <p slot="content">HINDI 1080p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1h9RTrK1N1bgE6XvKEa1UHB0GiO8GjrZy/view?usp=sharing">
+      <a href="https://shrinke.me/d49r">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://i.pinimg.com/originals/72/61/67/72616709f3a5d440f17c88684be8040a.png">
           <h1 slot="header">Spider-Man 2 (2004)</h1>
           <p slot="content">HINDI 1080p</p>
         </card>
       </a>
-      <a href="https://www.newtonas.tk/movies/spiderman3.mp4">
+      <a href="https://shrinke.me/08903">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://cdn.europosters.eu/image/750/posters/spiderman-3-teaser-i1282.jpg">
           <h1 slot="header">Spider-Man 3 (2007)</h1>
@@ -263,28 +263,28 @@
         </card>
       </a>
       
-      <a href="https://newtonas.tk/movies/venom.mp4">
+      <a href="https://shrinke.me/cqBB">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BZGNkNGEzMjMtZGNjMy00ZWRhLTkyMmYtMDljNjQ0MGMxZjYzXkEyXkFqcGdeQXVyMTA4NjE0NjEy._V1_.jpg">
           <h1 slot="header">Venom (2018)</h1>
           <p slot="content">HINDI 1080p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1gctc5ObhhadxGJg7jK5ixpuNWWNPhDWh/view?usp=sharing">
+      <a href="https://shrinke.me/hLTdNiB">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BNzI2Mjg3YjgtOGRlNy00YWMzLWFkMTQtYzcyYjU5ZjRjNmM1XkEyXkFqcGdeQXVyMTQyMTMwOTk0._V1_.jpg">
           <h1 slot="header">Venom: Let There Be Carnage (2021)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1paAmfN8RzspJs6pxR1smjkLpuzY35IcO/view?usp=sharing">
+      <a href="https://shrinke.me/B3dj0TS">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjMyOTM4MDMxNV5BMl5BanBnXkFtZTcwNjIyNzExOA@@._V1_.jpg">
           <h1 slot="header">The Amazing Spider-Man (2012)</h1>
           <p slot="content">ENGLISH 1080p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1cVxVs-5nR9cb7lM0AkHWhF68KhB2ZAQi/view?usp=drivesdk">
+      <a href="https://shrinke.me/iYGtpN">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BOTA5NDYxNTg0OV5BMl5BanBnXkFtZTgwODE5NzU1MTE@._V1_.jpg">
           <h1 slot="header">The Amazing Spider-Man 2 (2014)</h1>
@@ -298,14 +298,14 @@
           <p slot="content">Come and Hangout!</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/12h1zY_cua1WkMrfzAwXkf2J3TWcPD9by/view?usp=sharing">
+      <a href="https://shrinke.me/jPCBSIc">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BYzE5MjY1ZDgtMTkyNC00MTMyLThhMjAtZGI5OTE1NzFlZGJjXkEyXkFqcGdeQXVyNjU0OTQ0OTY@._V1_.jpg">
           <h1 slot="header">Deadpool (2016)</h1>
           <p slot="content">HINDI 1080p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1hVem_F1OyshhuY3y3kUrav_vDTHIW5fc/view?usp=drivesdk">
+      <a href="https://shrinke.me/Gl9YDuXi">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://i.pinimg.com/736x/0c/9f/3b/0c9f3b26646ad58cb3b470e0e259f58f.jpg">
           <h1 slot="header">Deadpool 2 (2018)</h1>
