--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     var app_advert = 2;
     var app_domains = ["movies.newtonas.tk"];
 </script>
-<script src='//shrinkme.io/js/full-page-script.js'></script>
+<script src='https://shrinkme.io/js/full-page-script.js'></script>
 
 </head>
 
