--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1121491723981481"
      crossorigin="anonymous"></script>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     var app_url = 'https://shrinkme.io/';
     var app_api_token = '59e6cd4ad27f2d0ae093635db3fc6ab5324041a7';
     var app_advert = 2;
     var app_domains = ["movies.newtonas.tk"];
 </script>
-<script src='https://shrinkme.io/js/full-page-script.js'></script>
+<script src='https://shrinkme.io/js/full-page-script.js'></script> -->
 
 </head>
 
@@ -353,70 +353,70 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a> -->
-      <a href="https://drive.google.com/file/d/1RVUI7-fSFHn3MjBGkIDAYOl2eMtO8rHI/view?usp=sharing">
+      <a href="https://shrinke.me/2oz7">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BNjgwNzAzNjk1Nl5BMl5BanBnXkFtZTgwMzQ2NjI1OTE@._V1_.jpg">
           <h1 slot="header">Doctor Strange (2016)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/19F5OEF70w__kK7yOCljlV7fVvF4YIfVE/view?usp=sharing">
+      <a href="https://shrinke.me/nlnhH">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BNWM0ZGJlMzMtZmYwMi00NzI3LTgzMzMtNjMzNjliNDRmZmFlXkEyXkFqcGdeQXVyMTM1MTE1NDMx._V1_.jpg">
           <h1 slot="header">Doctor Strange in the Multiverse of Madness (2022)</h1>
           <p slot="content">HINDI 1080p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1xsmcfdqjBYSFK2ooSnIFJg4dIK0rZhGm/view?usp=sharing">
+      <a href="https://shrinke.me/iVcOSiY">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BYjY2NzUxNjgtNjJhNy00NTA4LTlmNzItYzQ4MDdjNWYxZjkwXkEyXkFqcGdeQXVyMTEwMTY3NDI@._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">365 Days: This Day (2022)</h1>
           <p slot="content">HINDI 1080p</p>
         </card>
       </a>
-     <a href="https://drive.google.com/file/d/1yHV98WjXOfIAwAPuhsuMOuxp8ifXSg2M/view?usp=sharing">
+     <a href="https://shrinke.me/D5Ez">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BNjRmNDI5MjMtMmFhZi00YzcwLWI4ZGItMGI2MjI0N2Q3YmIwXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_.jpg">
           <h1 slot="header">Black Widow (2021)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1VQowtr5Lzp3LthxNZ-vyvyOOFzV7oS2S/view?usp=sharing">
+      <a href="https://shrinke.me/C2BXaNIX">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BYzVjYThmNDAtOTE1NC00YjQ2LTk4NWYtNTc4Yzc4OTRhYjllXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_.jpg">
           <h1 slot="header">Eternals (2021)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1QXteZOrLZ6bOfPjFMLQ42gAK0bHmm-OC/view?usp=sharing">
+      <a href="https://shrinke.me/VvuLC">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMDdmMTBiNTYtMDIzNi00NGVlLWIzMDYtZTk3MTQ3NGQxZGEwXkEyXkFqcGdeQXVyMzMwOTU5MDk@._V1_.jpg">
           <h1 slot="header">The Batman (2022)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1vaQOZDIKhf1UOCOebEUGlsogbY2WxKwe/view?usp=sharing">
+      <a href="https://shrinke.me/EcfTz">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMzIyNDE5ODI1OV5BMl5BanBnXkFtZTcwNTIyNDE0MQ@@._V1_.jpg">
           <h1 slot="header">Ghost Rider (2007)</h1>
           <p slot="content">ENGLISH 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1C3L9LMFqlJqOTSKGweWwQH2DtFYw-tpu/view?usp=sharing">
+      <a href="https://shrinke.me/T2Bls">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BY2UxNDYxMmUtZDQwOC00NjhhLTk4MjgtMWNiYWZhMDg3Nzg4XkEyXkFqcGdeQXVyMjQwMjk0NjI@._V1_.jpg">
           <h1 slot="header">Ghost Rider: Spirit of Vengeance (2011)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1JbCti4f2GlFandoYVdfqrN2srdOdSha0/view?usp=sharing">
+      <a href="https://shrinke.me/gRjSy5a">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTUyNzk3MjA1OF5BMl5BanBnXkFtZTcwMTE1Njg2MQ@@._V1_.jpg">
           <h1 slot="header">The Incredible Hulk (2008)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1yN3OJKqBos9YpHq0rX_1uab_LFl97Z5R/view?usp=sharing">
+      <a href="https://shrinke.me/MQ0m">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTg1MTY2MjYzNV5BMl5BanBnXkFtZTgwMTc4NTMwNDI@._V1_.jpg">
           <h1 slot="header">Black Panther (2018)</h1>
