--- a/ant-man/index.html
+++ b/ant-man/index.html
@@ -210,14 +210,14 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a> -->
-   <a href="https://drive.google.com/file/d/16jNjThHdWZ5UUy_3J-18twWcQRYTwSTK/view?usp=sharing">
+   <a href="https://shrinke.me/mE3r">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjM2NTQ5Mzc2M15BMl5BanBnXkFtZTgwNTcxMDI2NTE@._V1_.jpg">
           <h1 slot="header">Ant-Man (2015)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a> 
-      <a href="https://drive.google.com/file/d/1yJUCpGhBneKKHLWJCSLwkIDAiscO6F35/view?usp=sharing">
+      <a href="https://shrinke.me/23dv">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BYjcyYTk0N2YtMzc4ZC00Y2E0LWFkNDgtNjE1MzZmMGE1YjY1XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UY1200_CR90,0,630,1200_AL_.jpg">
           <h1 slot="header">Ant-Man and the Wasp (2018)</h1>
