--- a/avengers-movies/index.html
+++ b/avengers-movies/index.html
@@ -209,28 +209,28 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a> -->
-    <a href="https://drive.google.com/file/d/1MoVaHFEJBlnEuiGVai7oNFh1i7R_ryGz/view?usp=sharing">
+    <a href="https://shrinke.me/yU8ZL8t">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BNDYxNjQyMjAtNTdiOS00NGYwLWFmNTAtNThmYjU5ZGI2YTI1XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg">
           <h1 slot="header">The Avengers (2012)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-   <a href="https://drive.google.com/file/d/1s71UPt8AUe6VWXv7xKIvtS8aKpk_JxpC/view?usp=drivesdk">
+   <a href="https://shrinke.me/SlVoJ6l">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjMxNjY2MDU1OV5BMl5BanBnXkFtZTgwNzY1MTUwNTM@._V1_.jpg">
           <h1 slot="header">Avengers: Infinity War (2018)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/103-7QFEOUttMeJl49oVbtPY98K-86dQP/view?usp=sharing">
+      <a href="https://shrinke.me/XMZ8I">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTc5MDE2ODcwNV5BMl5BanBnXkFtZTgwMzI2NzQ2NzM@._V1_.jpg">
           <h1 slot="header">Avengers: Endgame (2019)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1a77Sb5dZ64Worcq5qHKrXiUPr3hj9NIC/view?usp=sharing">
+      <a href="https://shrinke.me/6Qh8S">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTM4OGJmNWMtOTM4Ni00NTE3LTg3MDItZmQxYjc4N2JhNmUxXkEyXkFqcGdeQXVyNTgzMDMzMTg@._V1_.jpg">
           <h1 slot="header">Avengers: Age of Ultron (2015)</h1>
