--- a/captain-america/index.html
+++ b/captain-america/index.html
@@ -209,21 +209,21 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a> -->
-   <a href="https://drive.google.com/file/d/1QWjhrFtwhWo6_nHCUt0BD7ciq5OAV9Kr/view?usp=sharing">
+   <a href="https://shrinke.me/ixQ2EZ">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTYzOTc2NzU3N15BMl5BanBnXkFtZTcwNjY3MDE3NQ@@._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">Captain America: The First Avenger (2011)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a> 
-      <a href="https://drive.google.com/file/d/1_RiYwxIFGvhzk2NsrzGmQfrOrByiHaEG/view?usp=sharing">
+      <a href="https://shrinke.me/PudmX">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMzA2NDkwODAwM15BMl5BanBnXkFtZTgwODk5MTgzMTE@._V1_.jpg">
           <h1 slot="header">Captain America: The Winter Soldier (2014)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1yYMhuhx6MtHg00o11StyBLFZ6sxThGYG/view?usp=sharing">
+      <a href="https://shrinke.me/vkToZ7">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjQ0MTgyNjAxMV5BMl5BanBnXkFtZTgwNjUzMDkyODE@._V1_.jpg">
           <h1 slot="header">Captain America: Civil War (2016)</h1>
