--- a/dceu/index.html
+++ b/dceu/index.html
@@ -211,28 +211,28 @@
       </a> -->
    
     
-    <a href="https://drive.google.com/file/d/1y7I2nb_LBDGxRu3hyxnTb9C4lf3MXVHM/view?usp=sharing">
+    <a href="https://shrinke.me/UCu9aJ">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BYjI3NDg0ZTEtMDEwYS00YWMyLThjYjktMTNlM2NmYjc1OGRiXkEyXkFqcGdeQXVyMTEyMjM2NDc2._V1_.jpg">
           <h1 slot="header">Zack Snyder's Justice League (2021)</h1>
           <p slot="content">HINDI 720p (Fan Dubbed)</p>
         </card>
       </a>
-    <a href="https://drive.google.com/file/d/16Icgf7A6VP5VHObNNBPl4O6DBqZby8aY/view?usp=sharing">
+    <a href="https://shrinke.me/hFTMrNk">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTk5ODk1NDkxMF5BMl5BanBnXkFtZTcwNTA5OTY0OQ@@._V1_.jpg">
           <h1 slot="header">Man of Steel (2013)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-    <a href="https://drive.google.com/file/d/1_3Efe0Q5QzwJrBwWqb3hEIR3sw91d9l9/view?usp=sharing">
+    <a href="https://shrinke.me/5KypEN55">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjM1OTMxNzUyM15BMl5BanBnXkFtZTgwNjYzMTIzOTE@._V1_.jpg">
           <h1 slot="header">Suicide Squad (2016)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-    <a href="https://drive.google.com/file/d/15Y9JShCQY8gZ5eWbCxlJAgUoKQcZlwjN/view?usp=sharing">
+    <a href="https://shrinke.me/0KJTy68">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMWU4NDQ2NjEtNjhkOS00Y2MwLWJkODItZmJhZGE0MDU1OWM4XkEyXkFqcGdeQXVyODE5NzE3OTE@._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">The Suicide Squad (2021)</h1>
@@ -240,21 +240,21 @@
         </card>
       </a>
     
-    <a href="https://drive.google.com/file/d/1d3NyQ_YTRolfHQnv8AUWcUdC67MDf7Ho/view?usp=sharing">
+    <a href="https://shrinke.me/RUXaD2">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTYzODQzYjQtNTczNC00MzZhLTg1ZWYtZDUxYmQ3ZTY4NzA1XkEyXkFqcGdeQXVyODE5NzE3OTE@._V1_.jpg">
           <h1 slot="header">Wonder Woman (2017)</h1>
           <p slot="content">English 720p (Hindi Subtitles)</p>
         </card>
       </a>
-    <a href="https://mega.nz/file/LyRGFb5J#OphC07UQiElj-NTI22vUK8y42tdHxWEzh4CVPaxX3xg">
+    <a href="https://shrinke.me/fmFLbZ">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BYTlhNzJjYzYtNGU3My00ZDI5LTgzZDUtYzllYjU1ZmU0YTgwXkEyXkFqcGdeQXVyMjQwMDg0Ng@@._V1_.jpg">
           <h1 slot="header">Wonder Woman 1984 (2020)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-    <a href="https://drive.google.com/file/d/1SM2q_nLIAPTw7y7ClweU6jXvaIkrdsj7/view?usp=sharing">
+    <a href="https://shrinke.me/uupRERa">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BOTk5ODg0OTU5M15BMl5BanBnXkFtZTgwMDQ3MDY3NjM@._V1_.jpg">
           <h1 slot="header">Aquaman (2018)</h1>
