--- a/guardians-of-the-galaxy/index.html
+++ b/guardians-of-the-galaxy/index.html
@@ -210,14 +210,14 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a> -->
-   <a href="https://drive.google.com/file/d/1v5JX9rSwGY5A6CBew2XY87rA_4lGw0Oi/view?usp=sharing">
+   <a href="https://shrinke.me/RBj6Xd">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTAwMjU5OTgxNjZeQTJeQWpwZ15BbWU4MDUxNDYxODEx._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">Guardians of the Galaxy (2014)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a> 
-      <a href="https://drive.google.com/file/d/1dUxRdLrUtPe2naWHLyNXkhdPCIKShNRt/view?usp=sharing">
+      <a href="https://shrinke.me/1YDKl">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BNjM0NTc0NzItM2FlYS00YzEwLWE0YmUtNTA2ZWIzODc2OTgxXkEyXkFqcGdeQXVyNTgwNzIyNzg@._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">Guardians of the Galaxy Vol. 2 (2017)</h1>
