--- a/iron-man/index.html
+++ b/iron-man/index.html
@@ -209,14 +209,14 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a> -->
-    <a href="https://drive.google.com/file/d/1lksiDYsxRL-ZAEkK_jsTzeQxe3eyZ4tG/view?usp=sharing">
+    <a href="https://shrinke.me/UwNj">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTczNTI2ODUwOF5BMl5BanBnXkFtZTcwMTU0NTIzMw@@._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">Iron Man (2008)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1Y-uhlDknF8MIIt6i-gGVQSTfd-VOVhOi/view?usp=sharing">
+      <a href="https://shrinke.me/mQbxp06">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTM0MDgwNjMyMl5BMl5BanBnXkFtZTcwNTg3NzAzMw@@._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">Iron Man 2 (2010)</h1>
@@ -224,7 +224,7 @@
         </card>
       </a>
       
-      <a href="https://drive.google.com/file/d/1ZrfDFD9LYKYQcQytz4kZLnDfxU8TfFQ5/view?usp=sharing">
+      <a href="https://shrinke.me/9E6VV">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjE5MzcyNjk1M15BMl5BanBnXkFtZTcwMjQ4MjcxOQ@@._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">Iron Man 3 (2013)</h1>
