--- a/thor/index.html
+++ b/thor/index.html
@@ -209,21 +209,21 @@
           <p slot="content">HINDI 720p</p>
         </card>
       </a> -->
-   <a href="https://drive.google.com/file/d/1-d2hVo5RH2lw-zu3fchDotXw8UmWUfDG/view?usp=sharing">
+   <a href="https://shrinke.me/ZTTEr">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BOGE4NzU1YTAtNzA3Mi00ZTA2LTg2YmYtMDJmMThiMjlkYjg2XkEyXkFqcGdeQXVyNTgzMDMzMTg@._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">Thor (2011)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-    <a href="https://drive.google.com/file/d/1imbtReeymjCh3Cy8TipodZO15Ib1ntsL/view?usp=sharing">
+    <a href="https://shrinke.me/Qm2j6Vq0">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMTQyNzAwOTUxOF5BMl5BanBnXkFtZTcwMTE0OTc5OQ@@._V1_FMjpg_UX1000_.jpg">
           <h1 slot="header">Thor: The Dark World (2013)</h1>
           <p slot="content">HINDI 720p</p>
         </card>
       </a>
-      <a href="https://drive.google.com/file/d/1-XFodavjOpmF_EQZEHHjYOqzJT6p5bQJ/view?usp=sharing">
+      <a href="https://shrinke.me/dneUJGUF">
         <card data-aos="fade-up" data-aos-delay="100"
           data-image="https://m.media-amazon.com/images/M/MV5BMjMyNDkzMzI1OF5BMl5BanBnXkFtZTgwODcxODg5MjI@._V1_.jpg">
           <h1 slot="header">Thor: Ragnarok (2017)</h1>
